--- a/src/components/main/school/School.css
+++ b/src/components/main/school/School.css
@@ -1,5 +1,10 @@
 .img-fluid{
     width: 180px;
+    height: 180px;
     margin-left: 40px;
+    border-radius: 50%;
     
+}
+.bg-card{
+    background-color:lavender;
 }
